finalized some spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -271,10 +271,10 @@ header .adi-banner-container .logo {
 header .adi-banner-container .tagline {
   color: #eeeeee;
   font-family: "League Gothic", "HelveticaNeue-Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 3.5em;
+  font-size: 3.0em;
   font-weight: 300;
   line-height: 1em;
-  margin: 1em 0 0.6em 0;
+  margin: 0.4em 0 0.4em 0;
 }
 header .adi-banner-container .newsletter {
   margin: auto;
@@ -331,7 +331,11 @@ section .strip .content h1.section-title {
 section .strip .content h2.section-tagline {
   margin: 0.5em 0 1em 0;
   font-weight: 300;
-  font-style: italic;
+  text-align: center;
+}
+section .strip .content h2.sub-section-tagline {
+  margin: 1.2em 0 0.5em 0;
+  font-weight: 300;
   text-align: center;
 }
 section .strip.gray {
@@ -425,6 +429,9 @@ section .strip.photo .opaque {
   position: relative;
   text-align: center;
 }
+.row .responsive-block p {
+  font-size: 1.2em;
+}
 .row .responsive-block.involved {
   width: 50%;
 }
@@ -466,6 +473,7 @@ section .strip.photo .opaque {
   margin: 0 .2em;
   float: left;
   width: 75%;
+  font-size: 1.2em;
 }
 .row .responsive-block.involved .button {
   width: 150px;
@@ -504,17 +512,17 @@ section .strip.photo .opaque {
   height: 35px;
   display: block;
 }
-.row .responsive-block.contact .button,
-.row .responsive-block.infra .button {
+.row .responsive-block.contact a,
+.row .responsive-block.infra a {
+  color: white;
+  line-height: 20px;
+}
+.row .responsive-block.contact a .button,
+.row .responsive-block.infra a .button {
   height: 35px;
   display: none;
   bottom: 0;
   padding: 0.5em 0.2em;
-}
-.row .responsive-block.contact .button a,
-.row .responsive-block.infra .button a {
-  color: white;
-  line-height: 20px;
 }
 .row .responsive-block.contact:hover .button-spacer,
 .row .responsive-block.infra:hover .button-spacer,
