--- a/less/header.less
+++ b/less/header.less
@@ -32,10 +32,10 @@ header {
     .tagline {
       color: @ltGray;
       font-family: @headingFonts;
-      font-size: 3.5em;
+      font-size: 3.0em;
       font-weight: 300;
       line-height: 1em;
-      margin: 1em 0 0.6em 0;
+      margin: 0.4em 0 0.4em 0;
     }
     .newsletter {
       margin: auto;
