--- a/less/main.less
+++ b/less/main.less
@@ -31,7 +31,11 @@ section {
       h2.section-tagline {
         margin: 0.5em 0 1em 0;
         font-weight: 300;
-        font-style: italic;
+        text-align: center;
+      }
+      h2.sub-section-tagline {
+        margin: 1.2em 0 0.5em 0;
+        font-weight: 300;
         text-align: center;
       }
     }
@@ -143,6 +147,10 @@ section {
     position: relative;
     text-align: center;
 
+    p {
+      font-size: 1.2em;
+    }
+
     &.involved {
       width: 50%;
 
@@ -185,6 +193,7 @@ section {
             margin: 0 .2em;
             float: left;
             width: 75%;
+            font-size: 1.2em;
           }
         }
       }
@@ -230,15 +239,15 @@ section {
         display: block;
       }
 
-      .button {
-        height: 35px;
-        display: none;
-        bottom: 0;
-        padding: 0.5em 0.2em;
+      a {
+        color: white;
+        line-height: 20px;
 
-        a {
-          color: white;
-          line-height: 20px;
+        .button {
+          height: 35px;
+          display: none;
+          bottom: 0;
+          padding: 0.5em 0.2em;
         }
       }
 
